--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div>
             <h3>Share This Via </h3>
             <div class="icon-container">
-                <a href="https://github.com/BimmiKumari" class="icon" id="Github">
+                <a href="https://github.com/DishuSharma01" class="icon" id="Github">
 
                     <i class="fa-brands fa-github">
                     </i>
@@ -59,15 +59,15 @@
                     <i class="fa-brands fa-twitter"></i>
                 </a> -->
 
-                <a href="https://www.instagram.com/bimmyysingh/" class="icon" id="instagram">
+                <a href="https://www.instagram.com/typical_deeksha/" class="icon" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="https://www.linkedin.com/in/bimmikumari14/" class="icon" id="linkedin">
+                <a href="https://www.linkedin.com/in/deekshasharma33/" class="icon" id="linkedin">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
 
-                <a href="#" class="icon" id="telegram">
+                <a href="https://www.threads.net/typical_deeksha" class="icon" id="telegram">
                     <img src="thread.webp" height="30px" width="30px">
                 </a>
             </div>
