--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="https://www.linkedin.com/in/deekshasharma33/" class="icon" id="linkedin">
+                <a href="https://www.linkedin.com/in/deeksha-sharma-2836a928a/" class="icon" id="linkedin">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
 
